<resources>
    <string name="app_name">ZW_Engineering</string>
    <string name="dome">dome</string>
    <string name="bg_text">Keppel Seghers-Zhen Hua Joint Venture</string>
    <string name="bg_text2">Request for Inspection Form</string>
    <string name="login_name">Empolyee ID</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="from_title">Request For Inspection</string>
    <string name="from_below_title">To Supervising Officer,</string>
    <string name="from_attention">Attention (Optional) :</string>

    <!--    <string name="from_des">The following work is expected to be ready for your inspection/testing (Portion, Location, Chainage, Level) (Foundation, Reinforcement, Formwork)</string>-->
    <string name="from_des">The inspection or testing is expected: \n
    (Portion, Location, Chainage, Level)
    </string>
    <string name="from_select_text">prior to proceeding the operation of:</string>
    <string name="from_check_text">E*M Works</string>

    <!--bottom setting -->
    <string name="title_activity_main_bottom">main_bottom</string>

    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_addition">Addition</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_searching">Searching</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <array name="default_array">
        <item>asdfasd1</item>
        <item>asdfasd</item>
        <item>asdfasd</item>
        <item>asdfasdasdfasd</item>
        <item>asdfasd</item>
        <item>asdfasd</item>
        <item>asdfasd6</item>
    </array>
</resources>