<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_playlist_add_check_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_setting" />

    <item
        android:id="@+id/navigation_addition"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/title_addition" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_searching"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_searching" />

</menu>
