<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.zw_engineering.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.zw_engineering.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_addition"
        android:name="com.example.zw_engineering.ui.addition.AdditionFragment"
        android:label="@string/title_addition"
        tools:layout="@layout/fragment_addition" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.zw_engineering.ui.calendar.CalendarFragment"
        android:label="@string/title_addition"
        tools:layout="@layout/fragment_addition" />

    <fragment
        android:id="@+id/navigation_searching"
        android:name="com.example.zw_engineering.ui.searching.SearchingFragment"
        android:label="@string/title_addition"
        tools:layout="@layout/fragment_addition" />
</navigation>