<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/main_activity_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:src="@drawable/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="100dp"/>

        <EditText
            android:id="@+id/main_activity_name"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:hint="@string/login_name"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColorHint="@color/gray"
            android:layout_width="200dp"
            android:layout_height="45dp" />

        <EditText
            android:id="@+id/main_activity_password"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:hint="@string/login_password"
            android:textColorHint="@color/gray"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textPassword"
            android:layout_width="200dp"
            android:layout_height="45dp" />


        <!--android:background="#9E0040"-->
        <TextView
            android:id="@+id/main_activity_login"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background_red"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#fff"
            android:text="@string/login"
            android:layout_width="200dp"
            android:layout_height="45dp" />
    </LinearLayout>

</RelativeLayout>